istio/tetrate/7-boutique app/6-vs-weight-orginal-and-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress
spec:
  hosts:
    - '*'
  gateways:
    - frontend-gateway
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
        subset: original
      weight: 50
    - destination:
        host: frontend
        port:
          number: 80
        subset: v1
      weight: 50
